resources/style.css
/* ... */
.warning{
    font-family:  fighting;
    position: absolute;
    text-align: center;
    z-index: 9999;
    display: none;.
}

.warning h1{
    color: #c5c523;
    text-shadow: 1px 1px black,
                -1px -1px black,
                -1px 1px black,
                1px -1px black;
    letter-spacing: 4px;
    width: 90%;
    margin: 40% auto;
}

.infoTextContainer {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%,-50%);
  width: 100%;
}

.infoHeader {
  color: #ffdd00;
}
.infoHeaderName, .infoHeaderNameRight {
    color: yellow;
}
.infoHeaderPower, .infoHeaderPowerRight {
    color: yellow;
}
.infoHeaderOccupation, .infoHeaderOccupationRight {
    color: yellow;
}

.characterName {
    font-family: fighting;
    font-size: 6vmin;
    color: #c7f62d;
    position: absolute;
    top: 70vh;
    width: 25%;
    text-align: center;
    text-shadow: 5px 5px 10px black;
}

.characterNameLeft {
    left: 2.5vw;
}

.characterNameRight {
    right: 3vw;
}

.playerInfo {
    font-family: 'Ubuntu', sans-serif;
    height: 20vh;
    width: 22vw;
    position: absolute;
    top: 76vh;
    padding: 5px;
    border: 1px solid;
    border-radius: 20px;
    background-color: rgba(0,0,0,0.6);
}

.playerInfoLeft {
    left: 4vw;
}

.playerInfoRight {
    right: 4vw;
}

.playerContainerRight {
    right: 0%;
    transform: scaleX(-1);
}

.playerSelectionContainer {
    height: 100vh;
    width: 40vw;
    display: inline-block;
    vertical-align: top;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 1px solid;
    background-color: rgba(0,0,0,0.6);
}

.row {
    width: 46.5vmin;
    height: 15vmin;
    text-align: center;
    position: relative;
    margin: 0.75vmin auto;
}

.infoRow {
  font-size: 2.25vmin;
  color: whitesmoke;
  margin: 0.5vh auto;
  text-align: center;
}

.gameTitle {
  color: #ffdd00;
  width: 100%;
  text-shadow: 5px 5px 10px black;
  font-size: 6vmin;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  font-family: ss4;
  text-align: center;
  pointer-events: none;
}

h1 {
  margin: 0;
  padding: 0;
}


.row:last-child {
  position: absolute;
  bottom: 3vh;
  margin: 0 auto;
  border: 5px solid darkred;
  color: white;
  border-radius: 5%;
  background-color: red;
  left: 50%;
  transform: translateX(-50%);
  box-shadow: 0 0 40px black;
  cursor: pointer;
}

.row:last-child:hover {
  border-color: yellow;
  box-shadow: 0 0 80px black;
}

.playerAvatar {
    border: 3px solid black;
    border-radius: 5%;
    display: inline-block;
    width: 15vmin;
    height: 15vmin;
    cursor: pointer;
}

.playerAvatar:first-child {
  margin-right: 0.75vmin;
  left: 0;
  position: absolute;
}

.playerAvatar:last-child {
  margin-left: 0.75vmin;
  position: absolute;
  right: 0;
}

.playerAvatar:hover {
    border-color: yellow;
}

.playerAvatarClicked {
    filter: grayscale(1)
}

.playButton {
    font-family: fighting;
    font-size: 10vmin;
    position: absolute;
    width: 100%;
    top: 50%;
    left: 50%;
    transform: translate(-50%,-50%);
    text-shadow: 0 0 20px black;
}

.playButton:focus {
    outline: 0;
}

#ironman, #deadpool, #batman, #magneto, #captainamerica, #domino, #thor, #wonderwoman, #mystique, #scarletwitch, #superman, #thething {
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

#ironman {
    background-image: url('images/avatars/iron-man.png');
}

#deadpool {
    background-image: url('images/avatars/deadpool.png');
}

#batman {
    background-image: url('images/avatars/batman.png');
}

#magneto {
    background-image: url('images/avatars/magneto.png');
}

#captainamerica {
    background-image: url('images/avatars/captain-america.png');
}

#domino {
    background-image: url('images/avatars/domino.png');
}

#thor {
    background-image: url('images/avatars/thor.png');
}

#wonderwoman {
    background-image: url('images/avatars/wonder-woman.png');
}

#mystique {
    background-image: url('images/avatars/mystique.png');
}

#scarletwitch {
    background-image: url('images/avatars/scarlet-witch.png');
}

#superman {
    background-image: url('images/avatars/superman.png');
}

#thething {
    background-image: url('images/avatars/thing.png');
}

/************************** gameboard ****************************/



.gameBoard {
    height: 100vh;
    width: 100vw;
    display: none;
    background-repeat: no-repeat;
    background-size: cover;
}

.hitPoints {
    width: 100%;
    height: 100%;
    background-color: red;
    background-image: url('https://media.giphy.com/media/lDKVeTHWDPSuc/giphy.gif');
    background-repeat: repeat;
    background-position: center;
    transition: 2s;
}
.left{
    position: absolute;
    right: 0;
}
.statsContainer {
    height: 17vh;
    width: 100vw;
    position: relative;
}

.hitPointsContainerLeft, .hitPointsContainerRight {
    width: 40vw;
    height: 8vh;
    border: 4px solid yellow;
    position: absolute;
    top: 2vh;
}

.hitPointsContainerLeft {
    left: 0.5vw;
}

.hitPointsContainerRight {
    right: 0.5vw;
}

.timer {
    height: 12vh;
    width: 12vw;
    position: absolute;
    top: 1.75%;
    left: 50%;
    transform: translateX(-50%);
    font-family: fighting;
    background-color: transparent;
    color: blue;
    font-size: 12vmin;
    text-shadow: 0 0 30px white;
    text-align: center;
}

.p1name {
  display: inline-block;
    color: whitesmoke;
    position: absolute;
    font-family: fighting;
    font-size: 3vmin;
    bottom: 2vh;
    left: 1vw;
    text-shadow: 0 0 10px black;
    letter-spacing: 3px;
}

.p2name {
  display: inline-block;
    color: whitesmoke;
    position: absolute;
    font-family: fighting;
    font-size: 3vmin;
    bottom: 2vh;
    right: 1vw;
    text-shadow: 0 0 10px black;
    letter-spacing: 3px;
}

.currentPlayerTurn {
    animation: readyPulse 2s infinite;
}
/* ... */

